--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
                 </div>
                 
                 <div class="command-card stagger active" data-delay="2000">
-                    <h3 class="command-name">/translate</h3>
+                    <h3 class="command-name">/afk</h3>
                     <p class="command-description">Translates text from one language to another.</p>
-                    <div class="command-usage">/translate [text] [target language]</div>
+                    <div class="command-usage">/afk [reason] [target language]</div>
                 </div>
             </div>
         </section>
