--- a/index.html
+++ b/index.html
@@ -494,23 +494,33 @@
         <i class="fab fa-discord"></i>
     </a>
     
-    <div class="container">
-        <section id="home">
-            <div class="logo stagger active" data-delay="0">
-                <div class="logo-icon">
-                    <i class="fas fa-robot"></i>
-                </div>
+<div class="container">
+    <!-- Home Section -->
+    <section id="home">
+        <div class="logo stagger active" data-delay="0">
+            <div class="logo-icon">
+                <i class="fas fa-robot"></i>
             </div>
-            <h1 class="stagger active" data-delay="100">Astro</h1>
-            <p class="tagline stagger active" data-delay="200">Discord landing Page</p>
-            <div class="hero-buttons stagger active" data-delay="300">
-                <a href="#" class="btn" id="add-to-discord-btn">
-                    <i class="fas fa-plus"></i> Add to Discord
-                </a>
-                <a href="#commands" class="btn" id="view-commands-btn">
-                    <i class="fas fa-terminal"></i> View Commands
-                </a>
-            </div>
+        </div>
+
+        <h1 class="stagger active" data-delay="100">Astro</h1>
+        <p class="tagline stagger active" data-delay="200">Astro landing Page</p>
+
+        <div class="hero-buttons stagger active" data-delay="300">
+            <a href="https://discord.com/oauth2/authorize?client_id=1446050408601747618&permissions=8&integration_type=0&scope=bot" 
+               class="btn" 
+               id="add-to-discord-btn" 
+               target="_blank">
+                <i class="fas fa-plus"></i> Add to Discord
+            </a>
+
+            <a href="#commands" class="btn" id="view-commands-btn">
+                <i class="fas fa-terminal"></i> View Commands
+            </a>
+        </div>
+    </section>
+</div>
+
             
             <div class="section-header stagger active" data-delay="400">
                 <h2 class="section-title">Powerful Features</h2>
